// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button BottomButton should match snapshot 1`] = `
<button
  className="bottom-button"
>
  Save
</button>
`;

exports[`Button IconButton should match snapshot 1`] = `
<button
  className="icon-button"
>
  <svg
    className="feather feather-rotate-ccw"
    fill="none"
    height="24"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="1 4 1 10 7 10"
    />
    <path
      d="M3.51 15a9 9 0 1 0 2.13-9.36L1 10"
    />
  </svg>
</button>
`;

exports[`Button SubHeaderButton should match snapshot 1`] = `
<button
  className="subheader-button"
>
  Add
</button>
`;
